[metadata]
name = allennlp-sklearn
version = 0.1.0-unreleased
description = Use scikit-learn models with AllenNLP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bryant1410/allennlp-sklearn
keywords = allennlp scikit-learn sklearn machine learning
classifiers =
  Development Status :: 3 - Alpha
  Framework :: Flake8
  Framework :: Flask
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
author = Santiago Castro
author_email = sacastro@umich.edu
license = Apache 2.0
license_file = LICENSE

[options]
packages = find:
include_package_data = True
install_requires =
  allennlp @ git+https://github.com/allenai/allennlp@4b7fafa
  joblib
  overrides
  numpy
  scikit-learn>=0.22.2
  torch
  typing-extensions>=3.7.4.1
python_requires = >=3.6.1

[options.packages.find]
exclude =
  *.tests
  *.tests.*
  tests.*
  tests
